--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,75 +3,92 @@ body{
 font-family: 'Open Sans', sans-serif;
 font-family: 'Poppins', sans-serif;
 font-family: 'Work Sans', sans-serif;
+margin: 0;
 }
 
 
+
 /* section-1 navigation bar */
-.section1{
-    /* border: 2px solid tomato;  */
-    margin: 0 120px;
+
+
+
+.section-1{
+   
+   width: 100%;
+   max-width: 1300px;
+   margin: 0 auto;
+   padding: 0 25px;
 }
 
 .nav-bar{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-top: 65px; 
+    
     
 }
 
 .nav-main ul{
     display: flex;
-    gap: 34px;
+    gap: 25px;
     list-style-type: none;
     font-weight: 600;
-font-size: 16px;
-color: #3A3A3A;
-margin-top: 95px;
-   
-    
+    font-size: 20px;
+    color: #3A3A3A; 
 
 }
+
+
 .nav-main ul li a{
+
     text-decoration: none;
 
 }
 
 .nav-title{
     font-weight: 700;
-font-size: 24px;
-color: #3A3A3A;
-margin-top: 65px;
+    font-size: 24px;
+    color: #3A3A3A;
+
 }
+
+
+
 
 /* section-2 style */
 
 
 .section-2{
-    /* border: 2px solid tomato; */
-    margin: 100px 120px;
+    
+    width: 100%;
+    max-width: 1300px;
+    margin: 100px auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .influencer-title{
     font-weight: 700;
-font-size: 52px;
-color: #3A3A3A;
+    font-size: 52px;
+    color: #3A3A3A;
 }
 
 .influencer-dec{
     font-weight: 600;
-font-size: 16px;
-color: #3A3A3A;
-margin-top: 16px;
+    font-size: 16px;
+    color: #3A3A3A;
+    margin-top: 16px;
 }
 
 .prebook-btn{
     color: white;
     width: 196px;
-height: 44px;
+    height: 44px;
 
 background: #E02C6D;
-border-radius: 41px;
+border-radius: 40px;
 border: 0;
 font-weight: 700;
 font-size: 16px;
@@ -87,24 +104,236 @@ background-size:  475px ;
 
 }
 
-/*  section-3 popular website  style*/
+
+
+/*  section-3 logo  style*/
 
 .section-3{
-    /* border: 2px solid black;  */
-    height: 110px;
-    margin: 0 165px;
+     width: 100%;
+    max-width: 1300px;
+    margin: 100px auto;
     margin-top: 60px;
+
 }
 .logo{
     display: flex;
     justify-content: center;
-    gap: 60px;
-    margin: 40px 60px ;
+    gap: 30px;
+    flex-wrap: wrap;
+
+   
   
 }
 
 
 /* section-4 */
+
+.section-4{
+       width: 100%;
+    max-width: 1300px;
+    margin: 100px auto;
+  
+   
+ 
+}
+
+.popular-collection-title{
+    color: #3A3A3A;
+    font-weight: 600;
+font-size: 28px;
+text-align: center;
+margin-bottom: 60px;
+}
+
+.all-product{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    gap: 40px;
+    justify-content: space-around;
+}
+
+
+.product{
+   
+
+padding:10px;
+background: #FFFFFF;
+box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+border-radius: 5px;
+}
+
+.product-img{
+    width: 328px;
+height: 256px;
+
+}
+.product-name{
+    margin-top: 25px;
+    font-weight: 500;
+font-size: 28px;
+color: #18191F;
+margin-bottom: 15px;
+}
+
+.product-value{
+    margin-top: 6px;
+    font-weight: 400;
+font-size: 24px;
+color: rgba(0, 0, 0, 0.87);
+margin-bottom: 2px;
+}
+
+.product-rating{
+  
+    color: gold;
+}
+.rating-dis{
+    color: #18191F  ;
+}
+.product-dec{
+    font-weight: 700;
+font-size: 14px;
+color: #787885;
+}
+
+.see-more{
+    margin-top: 50px;
+
+   text-align: right ;
+   color: rgba(224, 44, 109, 0.87);
+   
+
+
+}
+
+.see-more a{
+    font-weight: 700;
+font-size: 16px;
+color: rgba(224, 44, 109, 0.87);
+text-decoration:none ;
+
+}
+
+
+
+/* section-5 style */
+
+.section-5{
+   
+   width: 100%;
+   max-width: 1300px;
+   margin: 100px auto;
+    display: flex;
+    gap: 100px;
+    
+}
+.sec-5-img{
+    width: 404px;
+height: 270px;
+border-radius: 7px;
+}
+
+.sec-5-dec h3{
+    font-weight: 700;
+font-size: 38px;
+color: #0A0826;
+
+}
+.sec-5-dec p{
+    font-weight: 700;
+font-size: 16px;
+color: #6C6C6C;
+
+}
+.sec-5-dec button{
+    width: 155px;
+    height: 44px;
+    background: #E02C6D;
+    border: none;
+    color: #FFFFFF;
+
+}
+
+
+
+    /* FOOTER */
+
+.footer{
+   
+    height: 230px;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    background-color: #0A0826;
+    
+}
+
+
+
+
+
+.footer-content{
+    margin-top: 50px ;
+    width: 262px;
+height: 139px;
+
+text-align: center;
+color:#FFFFFF ;
+
+}
+
+.footer-content h4{
+    margin: 0;
+    text-align: center;
+    font-weight: 700;
+font-size: 24px;
+}
+
+.footer-content p{
+    color: #D9DBE1;
+}
+
+.social-icon{
+   display: flex;
+   justify-content: center;
+   gap: 20px;
+}
+
+
+
+@media only screen and (max-width:576px) {
+
+    .section-2{
+        display: grid;
+        grid-template-columns: repeat(1 1fr);
+    gri;
+    }
+
+    .all-product{
+    display: grid;
+    grid-template-columns: repeat(1 , 1fr);
+    gap: 40px;
+    justify-content: space-around;
+}
+
+
+.section-5{
+   
+     display:grid;
+    grid-template-columns: repeat(1 1fr
+    );
+    gap: 20px;
+     
+     
+ }
+
+ 
+}
+
+
+
+
+
 
 
 
